--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,7 @@
 @import "components/form";
 
 @import "layout/grid";
-
 @import "layout/header";
+@import "layout/footer";
 
 @import "pages/home";
