--- a/css/style.css
+++ b/css/style.css
@@ -331,6 +331,12 @@ body {
     z-index: 10;
     transition: all 0.2s;
     outline-offset: 2rem; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.33333333%;
+        box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4); } }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
