--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -9,6 +9,13 @@
     transition: all 0.2s;
     outline-offset: 2rem;
 
+    @include respond(tab-port) {
+      float: left;
+      position: relative;
+      width: 33.33333333%;
+      box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+    }
+
     &--p1 {
       left: 0;
       top: -2rem;
